ElastosBountyProgram/front-end/src/module/search/style.scss
@import '../../style/variable';
@import '../../style/color';

.c_Search {
  .admin-left-column {
    .filter-switch {
      padding-bottom: $gap_0;

      span {
        margin-right: $gap_0;
      }

      .label {
        font-size: 18px;
        vertical-align: middle;
      }
    }
  }

  .admin-right-column {
    min-height: 392px;

    .ant-list-item {
      margin: $gap_0 0;
    }
  }

  .filters-tree {
    margin-bottom: $gap_1;
  }
}

.filters-menu {
  background-color: white;
  padding: $gap_2;
}

